<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS Sample</string>
    <string name="refresh_orders">Refresh Orders</string>
    <string name="create_order">Create Order</string>
    <string name="search">Search</string>
    <string name="search_title">Search</string>
    <string name="update">Update</string>
    <string name="returns">Returns</string>
    <string name="refresh_order_returns">Refresh Order Returns</string>
    <string name="select_fulfillment_status">Fulfillment Status</string>
    <string name="create">Create</string>
    <string name="customer_full_name">Customer Full Name</string>
    <string name="select_status">Order Status</string>
    <string name="line_item_name">Line Item Name</string>
    <string name="select_fulfillment_mode">Line Item Fulfillment Mode</string>
    <string name="payment_status">Payment Status</string>
    <string name="amount">Amount</string>
    <string name="return_order">Return</string>
    <string name="order_number">Order Number</string>
    <string name="refresh_inventory">Refresh Inventory</string>
    <string name="create_inventory">Create Inventory</string>
    <string name="low_inventory_threshold">Low Inventory Threshold</string>
    <string name="quantity">Quantity</string>
    <string name="refresh_product">Refresh Product</string>
    <string name="create_product">Create Product</string>
    <string name="product_label">Product Label</string>
    <string name="product_amount">Product Amount</string>
    <string name="add_category">Add Category</string>
    <string name="product_type">Product Type</string>
    <string name="category">Category</string>
    <string name="category_product_added">Product Added</string>
    <string name="category_label">Category Label</string>
    <string name="add_product">Add Product</string>
    <string name="refresh_categories">Refresh Categories</string>
    <string name="tax_label">Tax Label</string>
    <string name="tax_description">Tax Description</string>
    <string name="rate_label">Rate Label</string>
    <string name="fixed_amount">Fixed Amount</string>
    <string name="rate_percentage">Rate Percentage</string>
    <string name="amount_type">Amount Type</string>
    <string name="tax_override_rate_label">Tax Override Rate Label</string>
    <string name="tax_override_fixed_amount">Tax Override Fixed Amount</string>
    <string name="tax_override_rate_percentage">Tax Override Rate Percentage</string>
    <string name="create_product_level_tax">Add Product Level Tax</string>
    <string name="create_override_rate_for_product">Add Override Rate For Product</string>
    <string name="tax_override_amount_type">Tax Override Amount Type</string>
    <string name="override_tax_rate_for_product">Override Tax Rate For Product</string>
    <string name="refresh_taxes">Refresh Taxes</string>
    <string name="create_category">Create Category</string>
    <string name="create_tax">Create Tax</string>
    <string name="delete">Delete</string>
    <string name="tax_association_items">Tax Association Items</string>
    <string name="tax_override_association">Tax Override Association</string>
    <string name="add_product_to_tax_association">Add Product to Tax Association</string>
    <string name="add_product_to_tax_override_association">Add Product to Tax Override Association</string>
    <string name="dismiss">Dismiss</string>
    <string name="open_tax_override_associations">Open Tax Override Associations</string>
    <string name="open_tax_associations">Open Tax Associations</string>
    <string name="refresh_price_adjustments">Refresh Price Adjustments</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="price_adjustment_association_items">Price Adjustment Association Items</string>
    <string name="add_product_to_price_adjustment_association_items">Add Product to Price Adjustment Association Items</string>
    <string name="price">Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="threshold">Threshold</string>
    <string name="label">Label</string>
    <string name="product_price">Product Price</string>
    <string name="display_order">Display Order</string>
    <string name="products">Products</string>
    <string name="current_products">Current Products</string>
    <string name="remove_product">Remove Product</string>
    <string name="tax_classification_label">Tax Classification Label</string>
    <string name="tax_classification_for_products">Tax Classification for Products</string>
    <string name="tax_override_custom_rate">Tax Override Custom Rate</string>
    <string name="tax_override_label">Tax Override Label</string>
    <string name="override_tax_for_products">Override Tax for Products</string>
    <string name="rate">Rate</string>
    <string name="show_products">Show Products</string>
    <string name="tax_type">Tax Type:</string>

</resources>