<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <include layout="@layout/loading_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/fixed_amount" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/rate_percentage" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/amount_type" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/type" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/price_adjustment_association_items" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="@dimen/item_spacing"
                    app:adapterLayout="@{@layout/price_adjustment_association_item}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:spaceItemDecoration="@{8}"
                    tools:listitem="@layout/price_adjustment_association_item" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_product_to_price_adjustment_association_items" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/error_layout" />

    </LinearLayout>
</layout>