<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.util.List" />

        <variable
            name="fulfillmentModes"
            type="List&lt;String>" />

        <variable
            name="statuses"
            type="List&lt;String>" />

        <variable
            name="fulfillmentStatuses"
            type="List&lt;String>" />

        <variable
            name="paymentStatuses"
            type="List&lt;String>" />

        <variable
            name="viewModel"
            type="com.godaddy.commerce.services.sample.orders.create.OrderCreateViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />
        <include layout="@layout/loading_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_status" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    app:autoCompleteData="@{statuses}"
                    app:onItemSelected="@{(position) -> viewModel.onStatusSelected(position)}" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_fulfillment_status" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    app:autoCompleteData="@{fulfillmentStatuses}"
                    app:onItemSelected="@{(position) -> viewModel.onFulfillmentStatusSelected(position)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/payment_status" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    app:autoCompleteData="@{paymentStatuses}"
                    app:onItemSelected="@{(position) -> viewModel.onPaymentStatusSelected(position)}" />

                <TextView
                    android:id="@+id/fullname_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/customer_full_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    android:labelFor="@+id/fullname_tv"
                    android:onTextChanged="@{(s, start, before, count) -> viewModel.onNameChanged(s.toString())}" />

                <TextView
                    android:id="@+id/line_item_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/line_item_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    android:labelFor="@+id/line_item_tv"
                    android:onTextChanged="@{(s, start, before, count) -> viewModel.onLineItemNameChanged(s.toString())}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_fulfillment_mode" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    app:autoCompleteData="@{fulfillmentModes}"
                    app:onItemSelected="@{(position) -> viewModel.onFulfillmentModeSelected(position)}" />


                <TextView
                    android:id="@+id/price_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="8dp"
                    android:text="@string/amount" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="4dp"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:labelFor="@+id/price_tv"
                    android:onTextChanged="@{(s, start, before, count) -> viewModel.onAmountChanged(s.toString())}" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/item_spacing"
                    android:layout_marginTop="@dimen/item_spacing"
                    android:onClick="@{() -> viewModel.create()}"
                    android:text="@string/create" />

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/error_layout" />

    </LinearLayout>
</layout>