<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <import type="com.godaddy.commerce.inventory.models.InventoryBundled" />

        <variable
            name="item"
            type="InventoryBundled" />

        <variable
            name="viewModel"
            type="com.godaddy.commerce.services.sample.inventory.create.InventoryCreateViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <include layout="@layout/loading_layout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/item_spacing"
                android:layout_marginTop="8dp"
                android:text="@string/low_inventory_threshold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/item_spacing"
                android:layout_marginTop="4dp"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onLowInventoryThresholdUpdated(s.toString())}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/item_spacing"
                android:layout_marginTop="8dp"
                android:text="@string/quantity" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/item_spacing"
                android:layout_marginTop="4dp"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onQuantityUpdated(s.toString())}" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/item_spacing"
                android:layout_marginTop="@dimen/item_spacing"
                android:onClick="@{() -> viewModel.showProductsDialog()}"
                android:text="@string/create" />

        </LinearLayout>

        <include layout="@layout/error_layout" />

    </LinearLayout>
</layout>